# gcl_classifier

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml  test.yml  unit-tests.yml
gcl_classifier/: __init__.py  baden16.py  classifier.py  data.py  labels.py  model.py
notebooks/: test_new_classifier_on_all_gcl.ipynb  train_classifier.ipynb
rgc_classifier/: classifier.py
tests/: test_data.py  test_model.py
